--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>R-HOME</title>
-<style>
-body {background-image:url("73-737854_amazing-vector-backgrounds-optical-fiber.jpg");}
-</style>
+    <title>R-HOME</title>
+    <style>
+        body {
+            background-image: url("73-737854_amazing-vector-backgrounds-optical-fiber.jpg");
+        }
+    </style>
 </head>
 <body>
-<h6 align="left"><font color="blue" size="6"><i>!!..It's project time..!!</i></h6></font>
-<center><a href="R-LIST.HTML"><img src="R.png" width="177" heigth="177"></a><img src="sign.png" width="123" height="99"></center>
-<h1 align="center"><font color="red" size="9" face="monotype corsiva">!!........RApps........!!</font>
-<hr><marquee  bgcolor="yellow" srollamount="24" direction="right" hspace="22px" behavior="alternate"><font color="green" size="7" font face="monotype corsiva">Ram...RApp...Rock</font></marquee><hr>
-<center><img src="R-MB.jpg" width="143" heigth="123"><img src="R-MB.jpg" width="143" heigth="123"><img src="R-MB.jpg" width="143" heigth="123"></center>
-<hr><marquee  bgcolor="yellow" scrollamount="24"direction="left" hspace="22px" behavior="alternate"><font color="green" size="7" font face="monotype corsiva">Ram...RApp...Rock</font></marquee><hr>
+    <h6 align="left"><font color="blue" size="6"><i>!!..It's project time..!!</i></font></h6>
+    <center>
+        <a href="R-LIST.HTML">
+            <img src="R.png" width="177" height="177">
+        </a>
+        <img src="sign.png" width="123" height="99">
+    </center>
+    <h1 align="center"><font color="red" size="9" face="monotype corsiva">!!........RApps........!!</font></h1>
+    <hr>
+    <marquee bgcolor="yellow" scrollamount="24" direction="right" hspace="22px" behavior="alternate">
+        <font color="green" size="7" face="monotype corsiva">Ram...RApp...Rock</font>
+    </marquee>
+    <hr>
+    <center>
+        <img src="R-MB.jpg" width="143" height="123">
+        <img src="R-MB.jpg" width="143" height="123">
+        <img src="R-MB.jpg" width="143" height="123">
+    </center>
+    <hr>
+    <marquee bgcolor="yellow" scrollamount="24" direction="left" hspace="22px" behavior="alternate">
+        <font color="green" size="7" face="monotype corsiva">Ram...RApp...Rock</font>
+    </marquee>
+    <hr>
 </body>
 </html>
