--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h6 align="left"><font color="blue" size="6"><i>!!..It's project time..!!</i></font></h6>
     <center>
-        <a href="R-LIST.HTML">
+        <a href="list.html">
             <img src="R.png" width="177" height="177">
         </a>
         <img src="sign.png" width="123" height="99">
