--- a/R-INFO.html
+++ b/R-INFO.html
@@ -15,7 +15,7 @@
 <td><a href="R-GOOGLE.HTML"><img SRC="Google.gif" width="444" height="199"></a><h2 align="center"><B><BIG>GOOGLE</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-TWITTER.HTML"><img src="Twitter.Gif" width="444" height="199"></a><h2 align="center"><B><BIG>TWITTER</B></BIG></h2</td>
+<td><a href="R-TWITTER.HTML"><img src="Twitter.gif" width="444" height="199"></a><h2 align="center"><B><BIG>TWITTER</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
