--- a/R-GOOGLE.HTML
+++ b/R-GOOGLE.HTML
@@ -6,7 +6,7 @@ p{color:indigo}
 </style> 
 </head>
 <body>
-<center><img src="Google.GIF" width="333" heigth="333"></center>
+<center><img src="Google.gif" width="333" heigth="333"></center>
 <h2 align="center"><font color="green" size="6" face="monotype corsiva">Do You Want To Know????</font>
 <p>Google is an American Multinational Technology company that focuses on artificial intelligence, search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, and consumer electronics.</P>
 <table Cell padding="99" cell spacing="9">
