--- a/R-TWITTER.HTML
+++ b/R-TWITTER.HTML
@@ -6,7 +6,7 @@ p{color:black}
 </style> 
 </head>
 <body>
-<center><img src="https://cdn.dribbble.com/users/1525393/screenshots/6484130/comp_1.gif" width="154" heigth="154"></center>
+<center><img src="https://cdnl.iconscout.com/lottie/premium/preview-watermark/twitter-6243928-5119902.mp4" width="154" heigth="154"></center>
 <h2 align="center"><font color="red" size="6" face="monotype corsiva">TWITTER</font>
 <p>Twitter is an American communications company.It operates microblogging , social networking service Twitter.It previously operated Vine short video app , Periscope livestreaming service.</P>
 <table Cell padding="99" cell spacing="9">
