--- a/R-TWITTER.HTML
+++ b/R-TWITTER.HTML
@@ -35,6 +35,6 @@ p{color:black}
 <td><font color="green" size="9" face="monotype corsiva"> :-   7,500+* </font></td>
 </tr>
 </table>
-<a href="http://www.twitter.co.in/"><font color="brown" size="7" face="monotype corsiva">!!..Do You Want To Tweeet..??</a>
+<a href="https://x.com/"><font color="brown" size="7" face="monotype corsiva">!!..Do You Want To Tweeet..??</a>
 </BODY>
 </HTML>
