--- a/R-INFO.html
+++ b/R-INFO.html
@@ -15,7 +15,7 @@
 <td><a href="R-GOOGLE.HTML"><img SRC="Google.gif" width="444" height="199"></a><h2 align="center"><B><BIG>GOOGLE</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-TWITTER.HTML"><img src="Twitter.gif" width="444" height="199"></a><h2 align="center"><B><BIG>TWITTER</B></BIG></h2</td>
+<td><a href="R-TWITTER.HTML"><img src="https://media1.giphy.com/media/ThqU9txnffpRNif5F7/200.gif?cid=82a1493bqd5z5d4stdnggvz9xs9a7ndqiazefsafsqxvsrqa&amp;ep=v1_gifs_search&amp;rid=200.gif&amp;ct=g" width="444" height="199"></a><h2 align="center"><B><BIG>TWITTER</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
