--- a/R-TWITTER.HTML
+++ b/R-TWITTER.HTML
@@ -6,7 +6,7 @@ p{color:black}
 </style> 
 </head>
 <body>
-<center><img src="https://media.tenor.com/XZhSdQbLdosAAAAM/tf.gif" width="154" heigth="154"></center>
+<center><img src="https://media1.giphy.com/media/ThqU9txnffpRNif5F7/200.gif?cid=82a1493bqd5z5d4stdnggvz9xs9a7ndqiazefsafsqxvsrqa&amp;ep=v1_gifs_search&amp;rid=200.gif&amp;ct=g" width="154" heigth="154"></center>
 <h2 align="center"><font color="red" size="6" face="monotype corsiva">TWITTER</font>
 <p>Twitter is an American communications company.It operates microblogging , social networking service Twitter.It previously operated Vine short video app , Periscope livestreaming service.</P>
 <table Cell padding="99" cell spacing="9">
