--- a/list.html
+++ b/list.html
@@ -9,7 +9,7 @@
 <tr>
 <td><A HREF="R-INFO.html"><img src="info-i.gif" width="199" height="143"></a><h2 align="center">Information</h2</td>
 <td></td>
-<td><A HREF="R-ENTER.html"><img src="entertainment.gif" width="199" height="143"></a><h2>Enetertainment</h2></td>
+<td><A HREF="enter.html"><img src="entertainment.gif" width="199" height="143"></a><h2>Enetertainment</h2></td>
 </tr>
  <tr>
 <td></td>
