--- a/R-YOUTUBE.HTML
+++ b/R-YOUTUBE.HTML
@@ -6,7 +6,7 @@ p{color:sky blue}
 </style> 
 </head>
 <body>
-<center><img src="Youtube.GIF" width="242" heigth="154"></center>
+<center><img src="Youtube.gif" width="242" heigth="154"></center>
 <h2 align="center"><font color="red" size="6" face="monotype corsiva">Youtube</font>
 <p></p>
 <table Cell padding="99" cell spacing="9">
