--- a/enter.html
+++ b/enter.html
@@ -15,7 +15,7 @@
 <td><a href="R-YOUTUBE.HTML"><img SRC="Youtube.gif" width="363" height="189"></a><h2 align="center"><B><BIG>YOUTUBE</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-INSTAGRAM.HTML"><img src="Instagram.GIF" width="414" height="189"></a><h2 align="center"><B><BIG>INSTAGRAM</B></BIG></h2</td>
+<td><a href="R-INSTAGRAM.HTML"><img src="Instagram.gif" width="414" height="189"></a><h2 align="center"><B><BIG>INSTAGRAM</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
