--- a/R-INSTAGRAM.HTML
+++ b/R-INSTAGRAM.HTML
@@ -6,7 +6,7 @@ p{color:PURPLE}
 </style> 
 </head>
 <body>
-<center><img src="Instagram.GIF" width="242" heigth="154"></center>
+<center><img src="Instagram.gif" width="242" heigth="154"></center>
 <h2 align="center"><font color="blue" size="6" face="monotype corsiva">INSTAGRAM</font>
 <p>It is a photo and video sharing social networking service.It allows users to upload media that can be edited with filters and organized by hashtags and geographical tagging. Posts can be shared publicly or with preapproved followers.</p>
 <table Cell padding="99" cell spacing="9">
