--- a/R-AMAZON.HTML
+++ b/R-AMAZON.HTML
@@ -6,7 +6,7 @@ p{color:BROWN}
 </style> 
 </head>
 <body>
-<center><img src="Amazon.GIF" width="242" heigth="154"></center>
+<center><img src="Amazon.gif" width="242" heigth="154"></center>
 <h2 align="center"><font color="red" size="6" face="monotype corsiva">AMAZON</font>
 <p>Amazon is an American multinational technology company which focuses on e-commerce, cloud computing, digital streaming, artificial intelligence.</P>
 <table Cell padding="99" cell spacing="9">
