--- a/market.html
+++ b/market.html
@@ -15,7 +15,7 @@
 <td><a href="R-AMAZON.HTML"><img SRC="Amazon.gif" width="515" height="189"></a><h2 align="center"><B><BIG>AMAZON</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-FLIPKART.HTML"><img src="FLIPKART.GIF" width="515" height="189"></a><h2 align="center"><B><BIG>FLIPKART</B></BIG></h2</td>
+<td><a href="R-FLIPKART.HTML"><img src="FLIPKART.gif" width="515" height="189"></a><h2 align="center"><B><BIG>FLIPKART</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
