--- a/R-FLIPKART.HTML
+++ b/R-FLIPKART.HTML
@@ -6,7 +6,7 @@ p{color:green}
 </style> 
 </head>
 <body>
-<center><img src="Flipkart.GIF" width="242" heigth="154"></center>
+<center><img src="FLIPKART.gif" width="242" heigth="154"></center>
 <h2 align="center"><font color="red" size="6" face="monotype corsiva">Flipkart</font>
 <p>Flipkart is an Indian e-commerce company.It initially focused on online book sales before expanding into other product categories such as consumer electronics, fashion, home essentials, groceries, and lifestyle products</p>
 <table Cell padding="99" cell spacing="9">
