--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 <td><A HREF="market.html"><img src="Market.gif" width="199" height="143"></a><h2 align="center">Marketing</h2></td>
 </tr> 
 <tr>
-<td><A HREF="R-FOOD.html"><img src="Food.gif" width="199" height="143"></a><h2 align="center">Food</h2></td>
+<td><A HREF="food.html"><img src="Food.gif" width="199" height="143"></a><h2 align="center">Food</h2></td>
 <td></td>
 <td><A HREF="R-PERSON.html"><img src="Personal.gif" width="199" height="143"></a><h2 align="center">Personal</h2></td>
 </table>
