--- a/foods.html
+++ b/foods.html
@@ -15,7 +15,7 @@
 <td><a href="R-SWIGGY.HTML"><img SRC="Swiggy.gif" width="292" height="202"></a><h2 align="center"><B><BIG>SWIGGY</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-ZOMATO.HTML"><img src="Zomato.GIF" width="292" height="202"></a><h2 align="center"><B><BIG>ZOMATO</B></BIG></h2</td>
+<td><a href="R-ZOMATO.HTML"><img src="Zomato.gif" width="292" height="202"></a><h2 align="center"><B><BIG>ZOMATO</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
