--- a/R-SWIGGY.HTML
+++ b/R-SWIGGY.HTML
@@ -6,7 +6,7 @@ p{color:GOLD}
 </style> 
 </head>
 <body>
-<center><img src="Swiggy.GIF" width="177" heigth="77"></center>
+<center><img src="Swiggy.gif" width="177" heigth="77"></center>
 <h2 align="center"><font color="dark green" size="6" face="monotype corsiva">SWIGGY</font>
 <p>Swiggy is an Indian online food ordering and delivery platform. Founded in July 2014, Swiggy is based in Bangalore and operates in 500 Indian cities as of September 2021.</p>
 <table Cell padding="99" cell spacing="9">
