--- a/R-ZOMATO.HTML
+++ b/R-ZOMATO.HTML
@@ -6,7 +6,7 @@ p{color:sky blue}
 </style> 
 </head>
 <body>
-<center><img src="Zomato.GIF" width="177" heigth="77"></center>
+<center><img src="Zomato.gif" width="177" heigth="77"></center>
 <h2 align="center"><font color="GREEN" size="6" face="monotype corsiva">ZOMATO</font>
 <p>Zomato is an Indian multinational restaurant aggregator and food delivery company.It provides information, menus and user-reviews of restaurants as well as food delivery options from partner restaurants in select cities.</p>
 <table Cell padding="99" cell spacing="9">
