--- a/list.html
+++ b/list.html
@@ -18,7 +18,7 @@
 <tr>
 <td><A HREF="https://ramalingeswararao950.github.io/HTML-CSS-App-Assembler/foods.html"><img src="Food.gif" width="199" height="143"></a><h2 align="center">Food</h2></td>
 <td></td>
-<td><A HREF="R-PERSON.html"><img src="Personal.gif" width="199" height="143"></a><h2 align="center">Personal</h2></td>
+<td><A HREF="R-PERSON.HTML"><img src="Personal.gif" width="199" height="143"></a><h2 align="center">Personal</h2></td>
 </table>
 </font> 
 </body>
