--- a/R-WHATSAPP.HTML
+++ b/R-WHATSAPP.HTML
@@ -6,7 +6,7 @@ p{color:INDIGO}
 </style> 
 </head>
 <body>
-<center><img src="Whatsapp.GIF" width="154" heigth="77"></center>
+<center><img src="Whatsapp.gif" width="154" heigth="77"></center>
 <h2 align="center"><font color="GREEN"size="6" face="monotype corsiva">WHATSAPP</font>
 <p>WhatsApp is an internationally available freeware, cross-platform centralized IM and VOIP service owned by Meta.It allows users to send text messages and voice messages, make voice and video calls, and share images, documents, user locations, and other content.WhatsApp's client application runs on mobile devices but is also accessible from desktop computers.</p>
 <table Cell padding="99" cell spacing="9">
