--- a/R-FACEBOOK.HTML
+++ b/R-FACEBOOK.HTML
@@ -6,7 +6,7 @@ p{color:BLUE}
 </style> 
 </head>
 <body>
-<center><img src="Facebook.GIF" width="177" heigth="77"></center>
+<center><img src="Facebook.gif" width="177" heigth="77"></center>
 <h2 align="center"><font color="blue"size="6" face="monotype corsiva">FACEBOOK</font>
 <p>The Facebook is an American multinational technology conglomerate based in Menlo Park, California. The company owns Facebook, Instagram, and WhatsApp, among other products and services include Facebook, Messenger, Facebook Watch, and Facebook Portal. </p>
 <table Cell padding="99" cell spacing="9">
