--- a/R-PERSON.HTML
+++ b/R-PERSON.HTML
@@ -15,7 +15,7 @@
 <td><a href="R-WHATSAPP.HTML"><img SRC="Whatsapp.gif" width="292" height="202"></a><h2 align="center"><B><BIG>WHATSAPP</BIG></B></h2</td>
 <td></td>
 <td></td>
-<td><a href="R-FACEBOOK.HTML"><img src="Facebook.GIF" width="292" height="202"></a><h2 align="center"><B><BIG>FACEBOOK</B></BIG></h2</td>
+<td><a href="R-FACEBOOK.HTML"><img src="Facebook.gif" width="292" height="202"></a><h2 align="center"><B><BIG>FACEBOOK</B></BIG></h2</td>
 </tr>
 </table>
 </font> 
